Se creo la vista de Registro de vendedor, vehículo y listado de vehiculos

--- a/T02/T02/Views/Shared/_Layout.cshtml
+++ b/T02/T02/Views/Shared/_Layout.cshtml
@@ -40,10 +40,11 @@
                                         Registro de Vendedores <i class="mdi mdi-login mdi-24px float-end"></i>
                                     </h4>
                                     <p class="mb-5">Agrega nuevos vendedores al sistema con su cédula, nombre y correo.</p>
-                                    <button class="btn btn-gradient-danger btn-rounded btn-fw">
+                                    <a href="@Url.Action("RegistroVendedores", "Home")"
+                                       class="btn btn-gradient-danger btn-rounded btn-fw">
                                         Ir al Registro
                                         <i class="mdi mdi-arrow-right"></i>
-                                    </button>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -55,10 +56,11 @@
                                         Registro de Vehículos <i class="mdi mdi-tractor mdi-24px float-end"></i>
                                     </h4>
                                     <p class="mb-5">Agrega vehículos indicando marca, modelo, color, precio y vendedor.</p>
-                                    <button class="btn btn-gradient-danger btn-rounded btn-fw">
+                                    <a href="@Url.Action("RegistroVehiculos", "Home")"
+                                       class="btn btn-gradient-danger btn-rounded btn-fw">
                                         Ir al Registro
                                         <i class="mdi mdi-arrow-right"></i>
-                                    </button>
+                                    </a>
                                 </div>
                             </div>
                         </div>
@@ -70,10 +72,11 @@
                                         Consulta de Vehículos <i class="mdi mdi-table-account mdi-24px float-end"></i>
                                     </h4>
                                     <p class="mb-5">Visualiza todos los vehículos registrados con su información completa.</p>
-                                    <button class="btn btn-gradient-danger btn-rounded btn-fw">
+                                    <a href="@Url.Action("ConsultaVehiculos", "Home")"
+                                       class="btn btn-gradient-danger btn-rounded btn-fw">
                                         Ver Consulta
                                         <i class="mdi mdi-arrow-right"></i>
-                                    </button>
+                                    </a>
                                 </div>
                             </div>
                         </div>
