--- a/T02/T02/Views/Shared/_Layout.cshtml
+++ b/T02/T02/Views/Shared/_Layout.cshtml
@@ -15,6 +15,10 @@
     <link href="~/Template/css/bootstrap-datepicker.min.css" rel="stylesheet" />
     <link rel="shortcut icon" href="~/Template/image/favicon.png" />
 
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.5/dist/jquery.validate.min.js"></script>
+
 </head>
 <body>
     @RenderBody()
