--- a/T02/T02/Views/Home/RegistroVehiculos.cshtml
+++ b/T02/T02/Views/Home/RegistroVehiculos.cshtml
@@ -17,6 +17,7 @@
                     <div class="form-group">
                         <label>Marca</label>
                         @Html.TextBoxFor(m => m.Marca, new { @placeholder = "Marca", @class = "form-control" })
+                        @Html.ValidationMessageFor(m => m.Marca, "", new { @class = "text-ligth" })
                     </div>
 
                     <div class="form-group">
